--- a/PaymentApp/src/app/payment-details/payment-details.component.html
+++ b/PaymentApp/src/app/payment-details/payment-details.component.html
@@ -1,23 +1,9 @@
-<form>
-    <input type="hidden" name="paymentDetailId" [value]="service.formData.paymentDetailId"/>
+<div class="jumbotron py-3">
+  <h1 class="display-4 text-center">Payment Detail Register</h1>
+</div>
 
-    <div class="fom-group">
-        <label>CARD OWNER NAME</label>
-        <input type="text" class="form-control form-control-lg" placeholder="Full name" name="cardOwnerName" #cardOwnerName="ngModel" [(ngModel)]="service.formData.cardOwnerName">
-    </div>
-
-    <div class="fom-group">
-        <label>CARD NUMBER</label>
-        <input type="text" class="form-control form-control-lg" placeholder="16 Digit Card Number" name="cardNumber" #cardNumber="ngModel" [(ngModel)]="service.formData.cardNumber">
-    </div>
-
-    <div class="fom-group">
-        <label>SECURITY CODE</label>
-        <input type="password" class="form-control form-control-lg" placeholder="Security code" name="securityCode" #securityCode="ngModel" [(ngModel)]="service.formData.securityCode">
-    </div>
-
-    <div class="fom-group">
-        <label>VALID THROUGH</label>
-        <input type="text" class="form-control form-control-lg" placeholder="MM/YY" name="ExpirationDate" #expirationDate="ngModel" [(ngModel)]="service.formData.expirationDate">
-    </div>
-</form>
+<div class="row">
+  <div class="col-md-6">
+      <app-payment-detail-form></app-payment-detail-form>
+  </div>
+</div>
