--- a/PaymentApp/src/app/payment-details/payment-details.component.html
+++ b/PaymentApp/src/app/payment-details/payment-details.component.html
@@ -4,6 +4,9 @@
 
 <div class="row">
   <div class="col-md-6">
-      <app-payment-detail-form></app-payment-detail-form>
+    <app-payment-detail-form></app-payment-detail-form>
+  </div>
+  <div class="col-md-6">
+    <span>List of payment details</span>
   </div>
 </div>
