--- a/PaymentApp/src/app/payment-details/payment-detail-form/payment-detail-form.component.html
+++ b/PaymentApp/src/app/payment-details/payment-detail-form/payment-detail-form.component.html
@@ -1,4 +1,4 @@
-<form novalidate autocomplete="off" #form="ngForm">
+<form novalidate autocomplete="off" #form="ngForm" (submit)="onSubmit(form)">
   <input
     type="hidden"
     name="paymentDetailId"
@@ -14,7 +14,7 @@
       [(ngModel)]="service.formData.cardOwnerName"
       required
       [class.invalid]="cardOwnerName.invalid && cardOwnerName.touched"
-    />
+      />
   </div>
   <div class="form-group">
     <label>CARD NUMBER</label>
@@ -61,5 +61,8 @@
         [class.invalid]="expirationDate.invalid && expirationDate.touched"
       />
     </div>
+  </div>
+  <div class="form-group">
+    <button class="btn btn-info btn-lg btn-block" type="submit" [disabled]="form.invalid">SUBMIT</button>
   </div>
 </form>
